// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-2 > button[disabled] {
  pointer-events: none;
}

.emotion-0 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<div
  class="CopyButton"
  data-test-id="cf-ui-copy-button"
  id="copyButton"
>
  <span
    class="emotion-2"
  >
    <button
      aria-describedby="cf-ui-tooltip"
      class="CopyButton__button"
      type="button"
    >
      <span
        class="emotion-1 CopyButton__TabFocusTrap"
        tabindex="-1"
      >
        <span
          class="CopyButton__text"
        >
          Copy 
           to clipboard
        </span>
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;

exports[`renders the component with a copy value 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-2 > button[disabled] {
  pointer-events: none;
}

.emotion-0 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<div
  class="CopyButton"
  data-test-id="cf-ui-copy-button"
  id="copyButton"
>
  <span
    class="emotion-2"
  >
    <button
      aria-describedby="cf-ui-tooltip"
      class="CopyButton__button"
      type="button"
    >
      <span
        class="emotion-1 CopyButton__TabFocusTrap"
        tabindex="-1"
      >
        <span
          class="CopyButton__text"
        >
          Copy 
          test
           to clipboard
        </span>
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-2 > button[disabled] {
  pointer-events: none;
}

.emotion-0 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<div
  class="CopyButton my-extra-class"
  data-test-id="cf-ui-copy-button"
  id="copyButton"
>
  <span
    class="emotion-2"
  >
    <button
      aria-describedby="cf-ui-tooltip"
      class="CopyButton__button"
      type="button"
    >
      <span
        class="emotion-1 CopyButton__TabFocusTrap"
        tabindex="-1"
      >
        <span
          class="CopyButton__text"
        >
          Copy 
           to clipboard
        </span>
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;
